--- a/Makefile.in
+++ b/Makefile.in
@@ -7,6 +7,7 @@ JAVA_APS = javamds \
 	   javascope \
            javatraverser \
 	   javadispatcher \
+	   javadevices \
 	   javaclient \
 	   mdsobjects/java
 
