--- a/javatraverser/Makefile.in
+++ b/javatraverser/Makefile.in
@@ -10,97 +10,6 @@ JAR = @JAR@
 RMIC = @RMIC@
 INSTALL=@top_srcdir@/conf/install-sh -c
 
-DEVICES = TRCHSetup.java\
-ADC265Setup.java\
-E1463Setup.java\
-VMEWavesSetup.java\
-MPBDecoderSetup.java\
-RFXClockSetup.java \
-RFXPulseSetup.java \
-RFXDClockSetup.java \
-RFXGClockSetup.java \
-MPBEncoderSetup.java \
-RFXTimingSetup.java \
-MPBRecorderSetup.java \
-TRCFSetup.java \
-Aurora14Setup.java \
-ACQD265Setup.java \
-NI6071ESetup.java\
-PELLETSetup.java\
-L5613Setup.java\
-RFXTimesSetup.java\
-RFXPoloidalSetup.java\
-RFXToroidalSetup.java\
-RFXPMSetupSetup.java\
-RFXPCSetupSetup.java \
-RFXPC4SetupSetup.java \
-RFXPVSetupSetup.java \
-RFXTFSetupSetup.java \
-RFXABUnitsSetup.java \
-RFXChopperSetupSetup.java \
-RFXInverterSetupSetup.java \
-RFXFeedforwardSetupSetup.java \
-RFXPRConfigSetup.java \
-TR10Setup.java \
-K3115Setup.java \
-DIO2Setup.java \
-DIO2EncoderSetup.java \
-WE7000Setup.java \
-WE7116Setup.java \
-WE7275Setup.java \
-WEGroupSetup.java \
-RFXControlSetup.java \
-T2ControlSetup.java \
-TR32Setup.java \
-TR6_3Setup.java \
-FR10Setup.java \
-OAM01Setup.java \
-RFXMOPSetup.java \
-RFXANSALDOSetup.java \
-IPC901Setup.java \
-CADHSetup.java \
-J221Setup.java \
-L6810Setup.java \
-RFXVISetupSetup.java \
-RFXVIConfigSetup.java \
-LASER_NDSetup.java\
-EDAMSetupSetup.java\
-DEQUSetupSetup.java\
-EM_GAINSetup.java\
-EM_EQU_TESTSetup.java\
-CHVPSSetup.java\
-CHVPS_SETSetup.java\
-RFXParametersSetup.java\
-CAMERASetup.java\
-FLU_GAINSetup.java\
-DFLUSetupSetup.java\
-EM_FLU_TESTSetup.java\
-BOLOSetup.java\
-XRAYSetup.java\
-SXCSetup.java\
-RFXAxiControlSetup.java\
-RFXAxiToroidalControlSetup.java\
-TOMOSetupSetup.java\
-TSEdgeCCDSetup.java\
-LASER_RUSetup.java\
-GEN_GAINSetup.java\
-EDAM_CPCISetupSetup.java\
-FEGroupSetup.java\
-ISIS_GAINSetup.java\
-FASTCAMSetup.java\
-ST133Setup.java\
-RFXVersionSetup.java\
-WE800Setup.java \
-WE900Setup.java \
-CAENV1731Setup.java \
-CAENV1740Setup.java \
-PLRMSetup.java \
-DPO7054Setup.java \
-L9109Setup.java \
-LASER_NDRTSetup.java \
-IPControlSetup.java \
-EQU_GAINSetup.java \
-EM_EQU_TEST_NEWSetup.java
 
 
 
@@ -132,7 +41,6 @@ DeviceChoice.java\
 DeviceDispatch.java\
 DeviceDispatchField.java\
 DeviceComponent.java\
-DeviceSetup.java\
 DeviceSetupBeanInfo.java\
 DeviceButtons.java\
 DeviceOk.java\
@@ -140,6 +48,7 @@ DeviceReset.java\
 DeviceControl.java\
 DeviceApply.java\
 DeviceCancel.java\
+DeviceSetup.java\
 DeviceWave.java\
 DeviceWaveDisplay.java\
 DeviceWaveDisplayCustomizer.java\
@@ -218,12 +127,6 @@ jTraverser.java\
 DecompileTree.java\
 CompileTree.java \
 LoadPulse.java \
-OAM01Setup.java \
-RFXPolControlSetup.java \
-RFXAxiControlSetup.java \
-RFXTorControlSetup.java \
-RFXAxiToroidalControlSetup.java \
-RFXMHDSetup.java \
 ParameterSetting.java \
 TestParameterSetting.java \
 Convert.java
@@ -278,9 +181,8 @@ install:
 @MAKEJAVADIR@classes/jTraverser.jar: jTraverser.class
 	$(JAR) c0f $@ *.class $(GIFS)
 
-jTraverser.class: 	$(SOURCES) $(DEVICES)
+jTraverser.class: 	$(SOURCES)
 	$(JAVAC) -g $(SOURCES)
-	$(JAVAC) -g $(DEVICES)
 	- $(RMIC) TreeServer 
 
 @MAKEBINDIR@ : ; mkdir @MAKEBINDIR@
